--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Drag Papers ❤️</title>
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'><link rel="stylesheet" href="./style.css">
+  
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
@@ -15,7 +17,7 @@
 
   
 <div class="paper image">
-  <p> and I fallen in</p>
+  <p> and I Fallen in</p>
     <p>Love with You 😍 </p>
    <img src="images/1.jpg" />
 </div>
